# GUI-Drop-Me-

./: .gitignore  .qmlls.ini  DOCKER_README.md  Dockerfile  README.md  REPO_BUNDLE.txt  REPO_TREE.txt  WINDOWS_QUICK_REFERENCE.md  WINDOWS_SETUP.md  docker-compose.windows-dev.yml  docker-compose.windows-wsl2.yml  docker-compose.windows.yml  docker-compose.yml  gui.pyproject  make-bundle.ps1  pyproject.toml  pytest.ini  sv.py  verify_fixes.py
.github/workflows/: tests.yml
docs/: DEPLOYMENT_FLEET.md  DEV_MODE_TESTING.md  LAZY_LOADING_AUDIT.md  PROTOCOL_TESTING.md  RESOURCE_OPTIMIZATION.md  TESTING.md
machine_files/: run_gui.bat  run_gui_nobaskets.bat
machine_files/dropme_protocol_logs/: protocol_events.jsonl  protocol_state.json  sensor_events.jsonl  sensor_snapshot.json  session_events.csv  weights.csv
qml/DropMe/: autoserial.qmltypes  autoserial_qmltyperegistrations.cpp  autoserialmetatypes.json  qmldir  serial.qmltypes  serial_qmltyperegistrations.cpp  serialmetatypes.json  server.qmltypes  server_qmltyperegistrations.cpp  servermetatypes.json  system_info.qmltypes  system_info_qmltyperegistrations.cpp  system_infometatypes.json
qml/DropMeQML/: CameraMaskedCapture.qml  Clock.qml  EnterCredentialsView.qml  EventBus.qml  Global.qml  MainWindow.qml  MaintenanceView.qml  MultilingualResource.qml  (+21 more)
tests/: qt_test_stubs.py  test_app_state.py  test_autoserial.py  test_machine_controller.py  test_mcu.py  test_protocol_integration.py  test_recycle_flow_coordinator.py  test_ui_coordinator.py
tools/: audit_lazy_loading.py  optimize_assets.py  probe_serial_port.py
(+98 files in other folders)
